<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.filmGallery.GalleryFragment">
    <ImageView
        android:id="@+id/outline_int"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/chevron_left_24px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="26dp"
        android:layout_marginTop="42dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textColor="@color/title_black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/outline_int"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/outline_int" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="36dp"
            android:layout_height="match_parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_1"
                style="@style/Widget.MyApp.Chip.Choice"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/frames" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_2"
                style="@style/Widget.MyApp.Chip.Choice"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/from_filming" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_3"
                style="@style/Widget.MyApp.Chip.Choice"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/posters" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2" />


</androidx.constraintlayout.widget.ConstraintLayout>