<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.HomePages.homePage.FilmographyFragment">
    <FrameLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:background="@color/grey_subtitle">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center"/>
    </FrameLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/outline_int"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/chevron_left_24px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="26dp"
        android:layout_marginTop="42dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filmography"
        android:textColor="@color/title_black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/outline_int"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/outline_int" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:text="@string/actor_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <HorizontalScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/text_name">
        <com.google.android.material.chip.ChipGroup
            android:layout_width="36dp"
            android:layout_height="match_parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_1"
                style="@style/Widget.MyApp.Chip.Choice"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/actor"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_2"
                style="@style/Widget.MyApp.Chip.Choice"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/produsser" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_3"
                style="@style/Widget.MyApp.Chip.Choice"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/director" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_filmography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>